--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,29 @@
 	</properties>
 
 	<dependencies>
+		<!-- Provedor JPA -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.8.Final</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- EntityManager JPA -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.3.8.Final</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Driver JDBC (banco de dados MySQL) -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.30</version>
+			<scope>runtime</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
@@ -46,21 +69,6 @@
 			<version>2.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
-		<!-- Driver JDBC (banco de dados Derby) -->
-
-		<!-- <dependency> <groupId>org.apache.derby</groupId> <artifactId>derbyclient</artifactId> 
-			<version>10.14.2.0</version> <scope>runtime</scope> </dependency> -->
-
-		<!-- Driver JDBC (banco de dados MySQL) -->
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.21</version>
-			<scope>runtime</scope>
-		</dependency>
-
 	</dependencies>
 
 	<build>
